@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-13T16:41:17Z",
+  "timestamp" : "2022-10-14T08:34:57Z",
   "count_outdated" : 831,
   "uniques_outdated" : 435,
   "count" : 848,
-  "uniques" : 445,
+  "uniques" : 446,
   "clones" : [
     {
       "timestamp": "2022-09-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -72,6 +72,13 @@
       "timestamp": "2022-10-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
