@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-09-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-10-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
